padding + gap fix

--- a/src/components/WhatWeDo/WhatWeDo.module.css
+++ b/src/components/WhatWeDo/WhatWeDo.module.css
@@ -21,7 +21,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  gap: 1rem;
+  gap: 10rem;
   background-color: var(--tan2);
   padding: 3rem;
   border-radius: 10px;
@@ -49,6 +49,10 @@
     grid-template-columns: repeat(2, 1fr);
   }
 
+    .card {
+    gap: 5rem;
+  }
+
 }
 
 @media screen and (max-width: 668px) {
@@ -56,7 +60,12 @@
     grid-template-columns: repeat(1, 1fr);
   }
 
-  .lottie, .lottieBox {
+  .lottie,
+  .lottieBox {
     height: 200px;
+  }
+
+  .card {
+    gap: 1rem;
   }
 }
